# pdfix

./: README.md  pyproject.toml
pdfix/: main.py
tests/: test_pdfix.py
