[tool.poetry]
name = "pdfix"
version = "0.1.0"
description = ""
authors = ["chiptopher <chrisboyerdev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.3.2"}
PyPDF2 = "^1.26.0"

[tool.poetry.scripts]
pdfix = "pdfix.main:app"

[settings.virtualenvs]
in-project = true

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
